[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Images/Drafts/Map/QUADRADIM MAPA transp.png" type="Texture" id=1]
[ext_resource path="res://Scenes/GUI/Diary.gd" type="Script" id=2]
[ext_resource path="res://Assets/Styles/Themes/Diary.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/Auxiliar/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Auxiliar/Character.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Auxiliar/CharacterInfo.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Fonts/cedarville_pnkfun1_cursive/Cedarville PnkFun 1 Cursive.ttf" type="DynamicFontData" id=7]

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.788235, 0.709804, 0.698039, 1 )

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.835294, 0.760784, 1, 1 )
border_width_top = 5
border_width_bottom = 5

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.788235, 0.709804, 0.698039, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.788235, 0.709804, 0.698039, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.835294, 0.760784, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.835294, 0.760784, 1, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.788235, 0.709804, 0.698039, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.788235, 0.709804, 0.698039, 1 )

[sub_resource type="Theme" id=10]
Button/colors/font_color = Color( 0.305882, 0.254902, 0.254902, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 0.478431 )
Button/colors/font_color_focus = Color( 0.32549, 0.294118, 0.52549, 1 )
Button/colors/font_color_hover = Color( 0.372549, 0.380392, 0.592157, 1 )
Button/colors/font_color_pressed = Color( 0.960784, 0.890196, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 5 )
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 2 )
Button/styles/pressed = SubResource( 6 )
Panel/styles/panel = SubResource( 11 )
TabContainer/colors/font_color_bg = Color( 0.0431373, 0.0352941, 0.0352941, 0.611765 )
TabContainer/colors/font_color_disabled = Color( 0.305882, 0.286275, 0.286275, 0.545098 )
TabContainer/colors/font_color_fg = Color( 0.286275, 0.25098, 0.25098, 1 )
TabContainer/constants/hseparation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 8
TabContainer/constants/top_margin = 24
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = SubResource( 7 )
TabContainer/styles/tab_bg = SubResource( 9 )
TabContainer/styles/tab_disabled = SubResource( 9 )
TabContainer/styles/tab_fg = SubResource( 8 )
Tabs/colors/font_color_bg = Color( 0.52549, 0.0705882, 0.0705882, 1 )
Tabs/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Tabs/colors/font_color_fg = Color( 0.94, 0.94, 0.94, 1 )
Tabs/constants/hseparation = 4
Tabs/constants/label_valign_bg = 2
Tabs/constants/label_valign_fg = 0
Tabs/constants/top_margin = 24
Tabs/fonts/font = null
Tabs/icons/close = null
Tabs/icons/decrement = null
Tabs/icons/decrement_highlight = null
Tabs/icons/increment = null
Tabs/icons/increment_highlight = null
Tabs/styles/button = null
Tabs/styles/button_pressed = null
Tabs/styles/tab_bg = null
Tabs/styles/tab_disabled = null
Tabs/styles/tab_fg = null

[sub_resource type="DynamicFont" id=12]
size = 40
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = ExtResource( 7 )

[node name="Diary" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="SceneStyle" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Border" type="ColorRect" parent="SceneStyle"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Background" type="ColorRect" parent="SceneStyle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -496.0
margin_top = -272.0
margin_right = 496.0
margin_bottom = 272.0
color = Color( 0.972549, 0.882353, 0.435294, 1 )

[node name="Cover" type="ColorRect" parent="SceneStyle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -362.0
margin_top = -209.0
margin_right = 362.0
margin_bottom = 209.0
grow_horizontal = 2
color = Color( 0.160784, 0.0901961, 0.0901961, 1 )

[node name="PageCover1" type="ColorRect" parent="SceneStyle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -204.0
margin_right = 352.0
margin_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.501961, 0.34902, 0.32549, 1 )

[node name="PageCover2" type="ColorRect" parent="SceneStyle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -352.0
margin_top = -204.0
margin_right = -16.0
margin_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.501961, 0.34902, 0.32549, 1 )

[node name="TabsContent" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TabContainer" type="TabContainer" parent="TabsContent"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -344.0
margin_top = -216.0
margin_right = -24.0
margin_bottom = 184.0
theme = SubResource( 10 )
tab_align = 0

[node name="Historiador" type="Tabs" parent="TabsContent/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="Mapa" type="Tabs" parent="TabsContent/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="Personagens" type="Tabs" parent="TabsContent/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="Missoes" type="Tabs" parent="TabsContent/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="Result" type="ColorRect" parent="TabsContent"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -196.0
margin_right = 344.0
margin_bottom = 188.0
color = Color( 0.788235, 0.709804, 0.698039, 1 )

[node name="HistorianTab" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 40.0
margin_bottom = 40.0

[node name="Player" parent="HistorianTab" instance=ExtResource( 4 )]
position = Vector2( -234.135, -116 )
scale = Vector2( 0.5, 0.5 )

[node name="PlayerName" type="RichTextLabel" parent="HistorianTab"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 88.0
margin_top = -200.0
margin_right = 288.0
margin_bottom = -112.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 12 )
text = "Name"

[node name="Abilitie1" type="RichTextLabel" parent="HistorianTab"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 76.0
margin_top = -96.75
margin_right = 292.0
margin_bottom = 24.25
custom_colors/default_color = Color( 0.172549, 0.0352941, 0.0352941, 1 )
custom_fonts/normal_font = SubResource( 13 )
text = "Habilidade Um
"

[node name="Abilitie2" type="RichTextLabel" parent="HistorianTab"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 76.0
margin_top = 3.20001
margin_right = 292.0
margin_bottom = 107.2
custom_colors/default_color = Color( 0.172549, 0.0352941, 0.0352941, 1 )
custom_fonts/normal_font = SubResource( 13 )
text = "Habilidade Um
"

[node name="Abilitie3" type="RichTextLabel" parent="HistorianTab"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 76.0
margin_top = -48.0
margin_right = 292.0
margin_bottom = 50.0
custom_colors/default_color = Color( 0.172549, 0.0352941, 0.0352941, 1 )
custom_fonts/normal_font = SubResource( 13 )
text = "Habilidade Um
"

[node name="MapTab" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 40.0
margin_bottom = 40.0

[node name="MapBackground" type="ColorRect" parent="MapTab"]
margin_left = -211.0
margin_top = -92.75
margin_right = 197.0
margin_bottom = 155.25

[node name="Map" type="Sprite" parent="MapTab"]
position = Vector2( -11, 27.25 )
scale = Vector2( 0.2275, 0.2275 )
texture = ExtResource( 1 )

[node name="Stick1" type="ColorRect" parent="MapTab"]
margin_left = -240.0
margin_top = -76.75
margin_right = -187.0
margin_bottom = -60.75
color = Color( 0.972549, 0.882353, 0.435294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stick2" type="ColorRect" parent="MapTab"]
margin_left = 149.0
margin_top = -116.75
margin_right = 165.0
margin_bottom = -76.75
color = Color( 0.972549, 0.882353, 0.435294, 1 )

[node name="Stick3" type="ColorRect" parent="MapTab"]
margin_left = -219.0
margin_top = 115.25
margin_right = -200.0
margin_bottom = 163.25
color = Color( 0.972549, 0.882353, 0.435294, 1 )

[node name="CharactersTab" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Char1" parent="CharactersTab" instance=ExtResource( 5 )]
position = Vector2( -328, -173.6 )
scale = Vector2( 0.15, 0.15 )

[node name="Char2" parent="CharactersTab" instance=ExtResource( 5 )]
position = Vector2( -160, -173.6 )
scale = Vector2( 0.15, 0.15 )

[node name="Char3" parent="CharactersTab" instance=ExtResource( 5 )]
position = Vector2( -244.4, -173.6 )
scale = Vector2( 0.15, 0.15 )

[node name="CharacterInfo" parent="CharactersTab" instance=ExtResource( 6 )]
position = Vector2( 48.0001, -164 )
scale = Vector2( 0.6, 0.6 )

[node name="Return" type="Button" parent="."]
margin_left = 833.0
margin_top = 501.0
margin_right = 993.0
margin_bottom = 552.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Continuar"

[connection signal="pressed" from="Return" to="." method="exit_diary"]
